--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,9 +21,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install docbuild-core
+        pip install sphinx
 
     - name: Build documentation
       run: |
-        # Command to build documentation using docbuild-core
-        docbuild-core build docs/
+        cd docs
+        make html
